refactor, add delete project by id